# pong3d

./: CMakeLists.txt  README.md  game.sln
biblioteki/glad/include/glad/: glad.h
biblioteki/glad/src/: glad.c
game/: ball.cpp  camera.cpp  game.cpp  game.vcxproj  game.vcxproj.filters  paddle.cpp  shader.cpp  table.cpp
game/include/: ball.h  camera.h  game.h  paddle.h  shader.h  table.h
game/shaders/: shader.vert
